--- a/public/signup.html
+++ b/public/signup.html
@@ -50,13 +50,13 @@
 
 <script>
     let firebaseConfig = {
-        apiKey: "your-api-key",
-        authDomain: "your-project-id.firebaseapp.com",
-        databaseURL: "https://your-project-id.firebaseio.com",
-        projectId: "your-project-id",
-        storageBucket: "",
-        messagingSenderId: "your-messaging-sender-id",
-        appId: "your-app-id"
+        apiKey: "AIzaSyBd4tSEh8B1c6CYGjtC0d9oRxlT3jmoxgc",
+        authDomain: "cip-kubernetes-dev.firebaseapp.com",
+        databaseURL: "https://cip-kubernetes-dev.firebaseio.com",
+        projectId: "cip-kubernetes-dev",
+        storageBucket: "cip-kubernetes-dev.appspot.com",
+        messagingSenderId: "63785118804",
+        appId: "1:63785118804:web:2f25b071ce8b089dc151c1"
     };
 
     firebase.initializeApp(firebaseConfig);
@@ -98,7 +98,8 @@
     }
 
     function gotoDashboard() {
-        window.location.replace("http://localhost:1313/dashboard.html");
+        // window.location.replace("http://localhost:1313/dashboard.html");
+        window.location.replace("https://firebase-ex-l6mmmvyhbq-lz.a.run.app/dashboard.html");
     }
 
 </script>
