--- a/public/signup.html
+++ b/public/signup.html
@@ -98,8 +98,8 @@
     }
 
     function gotoDashboard() {
-        // window.location.replace("http://localhost:1313/dashboard.html");
-        window.location.replace("https://firebase-ex-l6mmmvyhbq-lz.a.run.app/dashboard.html");
+        window.location.replace("http://localhost:8080/dashboard.html");
+        // window.location.replace("https://firebase-ex-l6mmmvyhbq-lz.a.run.app/dashboard.html");
     }
 
 </script>
