--- a/public/index.html
+++ b/public/index.html
@@ -95,8 +95,8 @@
     }
 
     function gotoDashboard() {
-        window.location.replace("https://firebase-ex-l6mmmvyhbq-lz.a.run.app/dashboard.html");
-        // window.location.replace("http://localhost:1313/dashboard.html");
+        // window.location.replace("https://firebase-ex-l6mmmvyhbq-lz.a.run.app/dashboard.html");
+        window.location.replace("http://localhost:8080/dashboard.html");
     }
 
 </script>
